--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "codestyle": "npm run prettier && npm run tslint",
     "docsify": "docsify serve ./docs",
     "typedoc": "typedoc --out ./docs/api ./src --readme docs/README.md",
-    "docs": "npm run typedoc && npm run docsify"
+    "docs": "npm run typedoc && npm run docsify",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "yarn run compile",
+    "pretest": "yarn run compile",
+    "posttest": "yarn run lint"
   },
   "keywords": [
     "gravitation",
@@ -23,8 +30,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/jest": "^28.1.6",
-    "@types/node": "^12.7.5",
+    "@types/node": "^14.11.2",
     "docsify-cli": "^4.3.0",
+    "gts": "^3.1.1",
     "husky": "^3.0.5",
     "jest": "^28.1.3",
     "prettier": "^1.18.2",
@@ -33,6 +41,6 @@
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.23.9",
-    "typescript": "^4.7.4"
+    "typescript": "~4.7.0"
   }
 }
